--- a/SustainabilityAppV1/Info.plist
+++ b/SustainabilityAppV1/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.cpsc04.zigzag</string>
+	<string>com.cpsc04.zigzaga</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
